[gd_scene load_steps=9 format=3 uid="uid://dpk1nmeggp345"]

[ext_resource type="Script" path="res://scripts/end_game_screen_black_won.gd" id="1_3muc2"]
[ext_resource type="Texture2D" uid="uid://bykaavenmcqjg" path="res://sprites/end_game_scene/main_menu_button.png" id="1_v3qp4"]
[ext_resource type="Texture2D" uid="uid://dk7mxy5wnqscq" path="res://sprites/end_game_scene/exit_button.png" id="2_rsubk"]
[ext_resource type="Texture2D" uid="uid://bnbvxgawqbmcx" path="res://sprites/end_game_scene/background.png" id="3_oefbx"]
[ext_resource type="Texture2D" uid="uid://da4bj152p530g" path="res://sprites/end_game_scene/you lost.png" id="4_r318j"]
[ext_resource type="Texture2D" uid="uid://cx8wwl7q6hhe1" path="res://sprites/end_game_scene/you won.png" id="5_bwmst"]
[ext_resource type="Texture2D" uid="uid://fqp2s1kdkf0v" path="res://sprites/end_game_scene/black_won.png" id="6_thkmk"]
[ext_resource type="Texture2D" uid="uid://dwx0f8bgkcejt" path="res://sprites/end_game_scene/black_won_title.png" id="8_jkn38"]

[node name="EndGameScreen" type="Node2D"]
script = ExtResource("1_3muc2")

[node name="Button" type="Button" parent="."]
offset_left = 51.0
offset_top = 510.0
offset_right = 945.0
offset_bottom = 835.0
scale = Vector2(0.4, 0.4)
focus_mode = 0
icon = ExtResource("1_v3qp4")
flat = true

[node name="Button2" type="Button" parent="."]
offset_left = 42.0
offset_top = 612.0
offset_right = 936.0
offset_bottom = 937.0
scale = Vector2(0.4, 0.4)
focus_mode = 0
icon = ExtResource("2_rsubk")
flat = true

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(240.438, 399.75)
scale = Vector2(0.445486, 0.415885)
texture = ExtResource("3_oefbx")

[node name="YouLost" type="Sprite2D" parent="."]
visible = false
position = Vector2(241, 400)
scale = Vector2(0.474742, 0.563725)
texture = ExtResource("4_r318j")

[node name="YouWon" type="Sprite2D" parent="."]
visible = false
position = Vector2(238, 398)
scale = Vector2(0.493398, 0.546569)
texture = ExtResource("5_bwmst")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(261, 174)
scale = Vector2(0.393367, 0.366327)
texture = ExtResource("6_thkmk")

[node name="BlackWonTitle" type="Sprite2D" parent="."]
position = Vector2(230, 400)
scale = Vector2(0.395724, 0.430412)
texture = ExtResource("8_jkn38")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Button2" to="." method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
